Added missing changes for Surefire plugin.